2010-03-04  Noel O'Boyle

	* test/files/testsym_2Dtests.sdf: Forgot to add test file

	* src/stereo/perception.cpp: In TetrahedralFrom3D, if a bond to the
	chiral center IsWedgeOrHash then make the stereo object unspecified.
	* src/builder.cpp: Fix logic when correcting cistrans stereo
	* test/testsym.py: The long-promised stereo tests that flushed out
	the two bugs above. Also, since it seems that each call to 'babel' is
	quite slow, I've bundled multiple SMILES into each call.
	* test/CMakeLists.txt: Simplified the logic surrounding the Python tests
	* test/testbabel.py: Added convenience function for finding test files

2010-03-04  Tim Vandermeersch

        * include/openbabel/stereo/stereo.h, src/stereo/facade.cpp: Add support
        for square-planar stereochemistry to OBStereoFacade.

        * src/formats/smilesformat.cpp: Add support for reading/writing 
        square-planar stereochemistry (@SP1, @SP2, @SP3).

        * test/smilestest.cpp: Add unit tests for smiles square-planar 
        reading/writing.

2010-03-03  David Lonie  <loniedavid@gmail.com>

	* src/generic.cpp, include/openbabel/generic.h:
	Changes to OBUnitCell to handle data more consistently. Note that
	this depreciates the use of GetOrthoMatrix and GetFractionalMatrix
	for conversions to/from fractional and cartesian
	coordinates. Simply multiplying by these matricies may no longer
	correctly convert coordinates since an orientation matrix has been
	introduced in order to handle cells that don't follow a standard
	alignment. Use

	vector3 OBUnitCell::FractionalToCartesian(vector3) and
	vector3 OBUnitCell::CartesianToFractional(vector3)

	instead. There are also two new convenience functions,

	vector3 OBUnitCell::WrapCartesianCoordinate(vector3) and
	vector3 OBUnitCell::WrapFractionalCoordinate(vector3)

	to move a set of coordinates into the unit cell.

2010-03-03  Noel O'Boyle

	* src/formats/mdlformat.cpp, src/stereo/perception.cpp, 